--- a/web/src/pages/Main/styles.css
+++ b/web/src/pages/Main/styles.css
@@ -6,9 +6,85 @@
     align-items: flex-start;
     justify-content: flex-start;
     flex-direction: column;
+    overflow-x: hidden;
 }
 
 #page-main header{
     padding: 10px;
     color: white;
+}
+
+
+#page-main main{
+    width: 100%;
+    height: 100%;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    flex-direction: column;
+
+}
+
+#page-main main > div{
+    background-color: white;
+    border-radius: 20px;
+    width: 90%;
+    padding: 4%;
+    height: 90%;
+    overflow-y: auto;
+}
+
+#page-main main div > ul > li{
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    margin-bottom: 10px;
+}
+
+#page-main main div > ul > li > .data-client-box{
+    display: flex;
+    align-items: flex-start;
+    justify-content: flex-start;
+    flex-direction: column;
+    width: 80%;
+}
+
+#page-main main div > ul > li > .buttons{
+    display: flex;
+    align-items: center;
+    justify-content: flex-end;
+    width: 20%;
+}
+
+#page-main main div > ul > li > .buttons > button{
+    padding: 10px 35px;
+    margin-left: 10px;
+}
+
+#page-main main div > ul > li > div > .data-client{
+    display: flex;
+    align-items: flex-start;
+    justify-content: space-between;
+    flex-wrap: wrap;
+}
+
+#page-main main div > ul > li > div > .data-client{
+    display: flex;
+    align-items: flex-start;
+    justify-content: space-between;
+    flex-wrap: wrap;
+}
+
+#page-main main div > ul > li > div > .data-client > .title{
+    width: 100%;
+    margin-bottom: 5px;
+}
+
+#page-main main div > ul > li > div > ol{
+    margin-top: 20px;
+}
+
+#page-main main div > ul > li > div > ol > li{
+    margin-left: 50px;
+    margin-bottom: 5px;
 }
